Fix: Font, spacing, etc. Resizes for accessibility

--- a/games/memoryGame.css
+++ b/games/memoryGame.css
@@ -138,9 +138,15 @@
     .controls-container {
         width: 75%;
     }
+    .wrapper {
+      width: 90%;
+    }
   }
   @media screen and (max-width: 700px) {
     .controls-container {
         width: 100%;
+    }
+    .game-title {
+      width: 100%;
     }
   }
